After help changes2

--- a/app/templates/help.html
+++ b/app/templates/help.html
@@ -28,7 +28,7 @@
                 </ul>
             </li>
             <li>
-                <strong>Enhanced Information (Enhanced Role output)</strong>
+                <strong>Enhanced Information (Enhanced output)</strong>
                 <ul>
                     <li>Sender Name</li>
                     <li>Contact Name</li>
